@startuml MCD_Tortiki
'== A4 portrait ==
skinparam pageWidth 210mm
skinparam pageMargin 10
skinparam dpi 150
scale max 800 width
skinparam backgroundColor #FFFFFF
skinparam defaultFontSize 10

skinparam class {
  BackgroundColor #EEF6FB
  BorderColor #1B6FA8
  FontColor #1B3A4B
  ArrowColor #1B6FA8
  FontSize 10
}

title Modèle Conceptuel de Données (MCD) — Tortiki

' ===== ENTITÉS (aucun type de donnée à ce niveau) =====

entity "USER" as User {
  * id
  --
  email
  mot_de_passe
  telephone
  ville
  latitude
  longitude
  actif
}

entity "ROLE" as Role {
  * id
  --
  nom
}

entity "LISTING" as Listing {
  * id
  --
  titre
  description
  prix
  portions
  ville
  creneau_retrait
  statut
}

entity "CUISINE_TYPE" as CuisineType {
  * id
  --
  nom
}

entity "ALLERGEN" as Allergen {
  * id
  --
  nom
  actif
}

entity "CONTACT_REQUEST" as ContactRequest {
  * id
  --
  statut
  message
  portions
  date_creation
  date_modification
}

entity "REVIEW" as Review {
  * id
  --
  note
  commentaire
  date_creation
}

' ===== ASSOCIATIONS NOMMÉES (cardinalités notation MCD française) =====

User "1,1" -- "0,n" Listing : PUBLIER
User "0,n" -- "0,n" Role : ATTRIBUER
CuisineType "1,1" -- "0,n" Listing : CATEGORISER
Listing "0,n" -- "0,n" Allergen : CONTENIR
Listing "1,1" -- "0,n" ContactRequest : CONCERNER
User "1,1" -- "0,n" ContactRequest : SOUMETTRE
ContactRequest "1,1" -- "0,1" Review : GENERER
User "1,1" -- "0,n" Review : REDIGER
Listing "1,1" -- "0,n" Review : EVALUER

note bottom of ContactRequest
  Contrainte d'unicité conceptuelle :
  un même USER (acheteur) ne peut soumettre
  qu'une seule demande par LISTING
end note

note right of Allergen
  Attribut "actif" introduit
  suite à la migration V6
  (désactivation par un administrateur)
end note

note right of Listing
  Attribut "ville" introduit
  suite à la migration V7
  (fiabilisation de la recherche)
end note

@enduml